# aoc2024

./: Cargo.toml  README.md
day1/: Cargo.toml
day1/src/: lib.rs
day2/src/: lib.rs
day3/src/: lib.rs  result.txt
day4/src/: lib.rs
day5/src/: lib.rs
src/: main.rs
