[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
day1 = { path = "./day1/" }
day2 = { path = "./day2/" }
day3 = { path = "./day3/" }
day5 = { path = "./day5/" }

[workspace]
members = [
    "day1", 
    "day2", 
    "day3", 
    "day5"
]
